tests/A2/reject/badEquality.ul
void main(){
    int x;
    boolean b;
    x==b;
}